k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: php-example
  name: php-example
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: php-example
  sessionAffinity: None
  type: ClusterIP
